# test

astra-scanner/: Cargo.toml  README.md  todo.md  work.md
astra-scanner/lang/: en.json
astra-scanner/pool/: config.json  ip.txt  ports.txt
astra-scanner/src/: asn.rs  channel.rs  config.rs  lang.rs  main.rs  scanner.rs  utils.rs
astra-scanner/src/gui/: app.rs  application.rs  message.rs  mod.rs  style.rs
astra-scanner/src/gui/views/: asn.rs  astra_server.rs  dashboard.rs  mod.rs  results.rs  settings.rs
astra-scanner/src/gui/widgets/: button.rs  card.rs  input.rs  mod.rs  progress.rs
astra-scanner/src/ui/: menu.rs  mod.rs  progress.rs  tui.rs
