[package]
name = "astra-scanner"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A high-performance Astra server scanner"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
futures = "0.3.30"
ipnetwork = "0.20.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
indicatif = "0.17.7"
colored = "2.1.0"
clap = { version = "4.4.8", features = ["derive"] }
anyhow = "1.0.75"
thiserror = "1.0.50"
scraper = "0.18.1"
tokio-stream = "0.1.14"
regex = "1.10.2"
lazy_static = "1.4.0"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.4.0"
rayon = "1.8.0"
num_cpus = "1.16.0"
async-trait = "0.1.74"
chrono = "0.4.31" 
tui = "0.19.0"
crossterm = "0.28.1"
# Iced GUI dependencies
iced = { version = "0.10.0", features = ["canvas", "tokio", "debug", "advanced"] }
rfd = "0.12.0" # Para diálogos de archivos nativos
rand = "0.8.5"
open = "5.0.0" # Para abrir URLs en el navegador predeterminado
